--- a/emacs/config.org
+++ b/emacs/config.org
@@ -12,6 +12,10 @@ Mistakes from the past:
    - When messing around with something, it's just too easy to mess around with `=init.el= instead of =init.org=.
    - One easy fix is to just remove the usage of =init.el= "completely", i.e. we use something like =(org-babel-load-file ...)= to evaluate the =init.org= (which then generates the =init.el=)
      - Good example: https://emacs.stackexchange.com/a/3147
+   - So what we're going to do is that we'll include a /slightly/ customized version of =org-babel-load-file= for which we can specify which file to tangle to.
+     - Allows us to define the full configs by specifying two different blocks:
+       - =init-minimal.el=: defines a minimalist config which can be useful in scenarios where I don't need all the bells and whistles, e.g. if I want to do some remote editing through thet terminal.
+       - =init-full.el=: the full init file I use on my personal devices.
  
 So. The strategy will be as follows.
 1. Different topics / packages get their own section.
@@ -26,6 +30,55 @@ Some other significant changes:
 2. Repalce =org-ref= with =citar= and =org-cite.el=.
 
 * General stuff
+** Loading the config
+As mentioned in the overview, we're going to take the following approach in main init file:
+#+begin_src emacs-lisp
+(require 'org)
+
+;; A copy-paste from https://github.com/bzg/org-mode/blob/bd468136dd1a2172302b3ec980c5e6b6e327d683/lisp/org.el#L249-L279
+;; but with the option of specifying the tangled file `file-out'.
+;; Note that if blocks have specified a `:tangle' header, only those matching `file-out'
+;; will indeed be tangled.'
+(defun my/org-babel-load-file (file &optional file-out compile)
+  "Load Emacs Lisp source code blocks in the Org FILE to FILE-OUT.
+This function exports the source code using `org-babel-tangle'
+and then loads the resulting file using `load-file'.  With
+optional prefix argument COMPILE, the tangled Emacs Lisp file is
+byte-compiled before it is loaded."
+  (interactive "fFile to load: \nP")
+  (let ((tangled-file (if file-out file-out (concat (file-name-sans-extension file) ".el"))))
+    ;; Tangle only if the Elisp file is older than the Org file.
+    ;; Catch the case when the .el file exists while the .org file is missing.
+    (unless (file-exists-p file)
+      (error "File to tangle does not exist: %s" file))
+    (when (file-newer-than-file-p file tangled-file)
+      (org-babel-tangle-file file
+                             tangled-file
+                             (rx string-start
+                                 (or "emacs-lisp" "elisp")
+                                 string-end))
+      ;; Make sure that tangled file modification time is
+      ;; updated even when `org-babel-tangle-file' does not make changes.
+      ;; This avoids re-tangling changed FILE where the changes did
+      ;; not affect the tangled code.
+      (when (file-exists-p tangled-file)
+        (set-file-times tangled-file)))
+    (if compile
+	    (progn
+	      (byte-compile-file tangled-file)
+	      (load-file (byte-compile-dest-file tangled-file))
+	      (message "Compiled and loaded %s" tangled-file))
+      (load-file tangled-file)
+      (message "Loaded %s" tangled-file))))
+#+end_src
+
+Then, we simply add one more line to define which of the configs defined in this file we want. For example, if we want the minimal config:
+#+begin_src emacs-lisp
+;; Actually load the file we're interested in.
+(my/org-babel-load-file
+     (expand-file-name "config.org" user-emacs-directory)       ;; <= this file
+     (expand-file-name "init-minimal.el" user-emacs-directory)) ;; <= the tangled file
+#+end_src
 
 ** =~/.authinfo=
 - Effectively a very simple plain-text password manager with encryption (if used right)
@@ -62,7 +115,7 @@ There are two needs:
 ****** =davmail=
 - Effectively functions as a local email server, handling everything between you and Outlook, e.g. authentication.
 
-#+begin_src shell :results output :wrap "src conf"
+#+begin_src shell :results output :wrap "src conf" :eval no
 less ~/.offlineimaprc
 #+end_src
 
@@ -580,6 +633,9 @@ text/html;\\s-*charset=\\([^\t\n\r \"'>]+\\)[^>]*>" nil t)
 #+end_src
 
 ** Org
+
+*** =org=
+
 
 *** =org-ref=
 
